--- a/css/teach.css
+++ b/css/teach.css
@@ -1,3 +1,4 @@
+
 .wrap{
     width: 100%;
     min-width: 1200px;
@@ -8,7 +9,7 @@ aside{
     min-width: 280px;
     padding-top: 100px;
 }
-aside .txt{
+aside .txt_aside{
     width: 280px;
     margin: auto;
 }
@@ -27,7 +28,7 @@ aside h3{
     width: 100%;
     font-size: 28px;
     font-weight: bold;
-    line-height: 1.6;
+    /* line-height: 1.6; */
     color: #fafafa;
     text-align: center;
 }
@@ -38,16 +39,16 @@ main{
 main .container{
     width: 100%;
     min-width: 900px;
-    height: 165px;
-    overflow: hidden;
+    /* height: 165px; */
+    /* overflow: hidden; */
     box-shadow: 0px -10px 8px 3px rgb(85, 64, 51);
     transition: .5s;
 }
-
-main .container:hover{
-    height: 200px;
+/* 
+main .container:hover .control{
+    height: 150px;
     margin-top: -15px;
-}
+} */
 main .container:nth-child(1), main .container:nth-child(4), main .container:nth-child(7), main .container:nth-child(10){
     background-color: rgb(241, 149, 56);
 }
@@ -58,13 +59,13 @@ main .container:nth-child(3), main .container:nth-child(6), main .container:nth-
     background-color: rgb(192, 53, 53);
 }
 
-main .container:last-child{
+/* main .container:last-child{
     height: 400px;
 }
 main .container:last-child img{
     width: 100%;
     margin-top: 50px;
-}
+} */
 main .container h3{
     font-size: 42px;
     font-weight: bold;
@@ -78,9 +79,14 @@ main .container h3:hover{
 main .txt{
     width: 900px;
     margin: auto;
+    display: none;
 }
 main p{
     width: 100%;
     padding: 40px 30px 30px 50px;
     color: rgb(43, 34, 34);
+}
+/* 補丁 */
+.-on::after{
+    border: transparent;
 }
