--- a/css/basis.css
+++ b/css/basis.css
@@ -41,8 +41,7 @@ button:hover{
     cursor: pointer;
 }
 header{    
-    width: 100%;
-    min-width: 1200px;
+    width: 100%;    
     height: 80px;
     display: flex;
     background-color: #212121;
@@ -56,7 +55,8 @@ header a img{
     margin-right: -80px;
 }
 nav{
-    width: 1200px;    
+    width: 100%;    
+    max-width: 1200px;
     height: 100%;
     margin: auto;
 }
@@ -151,11 +151,7 @@ footer p::before{
     display: inline-block;
     color: #fafafa;
 }
-/* .path a::after{
-    content: "/";
-    padding: 4px;
-    color: #fafafa;
-} */
+
 .path a{
     text-decoration: underline;
 }
@@ -176,3 +172,19 @@ footer p::before{
     right: 25%;
     bottom: 15px;
     border-bottom: 1px solid #FFB74D;
+}
+
+@media screen and (max-width: 1439px) and (min-width: 1200px){
+    
+    nav{
+        max-width: 1000px;
+    }
+}
+@media screen and (max-width: 1199px) and (min-width: 992px){
+    header a img{
+        margin-right: 0;
+    }
+    nav{
+        max-width: 960px;
+    }
+}
