--- a/css/basis.css
+++ b/css/basis.css
@@ -17,6 +17,7 @@ p{
     color: #FAFAFA;
     line-height: 1.8;
 }
+
 button{
     font-size: 24px;
     /* color: #FAFAFA; */
@@ -40,6 +41,7 @@ button:hover{
     border: transparent;
     cursor: pointer;
 }
+
 header{    
     width: 100%;    
     height: 80px;
@@ -102,8 +104,7 @@ nav a{
 }
 
 footer{
-    width: 100%;
-    min-width: 1200px;
+    width: 100%;    
     background-color: #9E9E9E;
     padding-top: 35px;
 }
@@ -119,7 +120,8 @@ footer img{
     width: 57px;
 }
 footer p{
-    width: 1100px;
+    width: 100%;
+    max-width: 1100px;
     margin: auto;
     text-align: center;
     line-height: 1.5;
@@ -174,8 +176,7 @@ footer p::before{
     border-bottom: 1px solid #FFB74D;
 }
 
-@media screen and (max-width: 1439px) and (min-width: 1200px){
-    
+@media screen and (max-width: 1439px) and (min-width: 1200px){    
     nav{
         max-width: 1000px;
     }
@@ -187,4 +188,21 @@ footer p::before{
     nav{
         max-width: 960px;
     }
+}
+@media screen and (max-width: 991px){
+    header a img{
+        margin-right: 0;
+    }
+    nav{
+        max-width: 650px;
+    }
+}
+@media screen  and (max-width: 767px){
+    /* nav{
+        position: fixed;
+
+    }
+    nav li{
+        flex-flow: column;
+    } */
 }
