--- a/css/basis.css
+++ b/css/basis.css
@@ -62,6 +62,12 @@ nav{
     height: 100%;
     margin: auto;
 }
+nav.-translate{
+    transform: translateX(0px);    
+}
+nav.-transition{
+    transition: .4s;
+}
 nav ul{
     width: 100%;
     height: 100%;
@@ -176,6 +182,73 @@ footer p::before{
     border-bottom: 1px solid #FFB74D;
 }
 
+/*humberger*/
+.hamburg {
+    display: none;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    align-self: center;
+}
+.hamburg:hover{
+    cursor: pointer;
+}
+
+div.hamburg span {
+    border-radius: 50px;
+    background-color: #fafafa;
+    width: 45px;
+    height: 5px;
+    display: block;
+    position: absolute;
+}
+
+.span1 {
+    transform: translate(-50%)rotateZ(0deg);
+    top: 15%;
+    left: 25px;
+    transition: .6s cubic-bezier(.5,-0.51,.51,1.48);
+}
+
+.span2 {
+    transform: translate(-50%);
+    top: 45%;
+    left: 25px;
+    transition: .6s cubic-bezier(.5,-0.51,.51,1.48);
+    opacity: 1;
+}
+
+.span3 {
+    transform: translate(-50%)rotateZ(0deg);
+    top: 75%;
+    left: 25px;
+    transition: .6s cubic-bezier(.5,-0.51,.51,1.48);
+}
+
+.move1 {
+    transform: translate(-50%)rotate(-405deg);
+    top: 45%;
+    left: 25px;
+    opacity: 1;
+}
+
+.move2 {
+    transform: translate(-50%)rotateZ(0deg);
+    top: 45%;
+    left: 25px;
+    opacity: 0;
+}
+.move3 {
+    transform: translate(-50%)rotateZ(405deg);
+    top: 45%;
+    left: 25px;
+    opacity: 1;
+}
+/*humberger*/
+
+
 @media screen and (max-width: 1439px) and (min-width: 1200px){    
     nav{
         max-width: 1000px;
@@ -198,11 +271,39 @@ footer p::before{
     }
 }
 @media screen  and (max-width: 767px){
-    /* nav{
+    .hamburg{
+        display: block;
+    }
+    nav{
+        max-width: 767px;
+        height: calc(100vh - 80px);        
         position: fixed;
+        top: 80px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(33, 33, 33, .9);
+        transform: translateX(100%);
+        
 
     }
-    nav li{
+    nav ul{
         flex-flow: column;
-    } */
+    }
+    nav ul li{
+        min-height: 50px;
+    }
+    nav ul li::after{
+        display: none;
+    }
+    nav li a{
+        font-size: 30px;
+    }
+    nav li a.-on{
+        color: #FFB74D;
+
+    }
+    nav .-on::after{
+        display: none;
+    }
 }
