--- a/css/basis.css
+++ b/css/basis.css
@@ -1,6 +1,7 @@
 *{
     box-sizing : border-box;    
     text-decoration: none;
+    /* outline: 1px solid red; */
 }
 body{
     background-color: #212121;
