--- a/css/basis.css
+++ b/css/basis.css
@@ -174,6 +174,9 @@ footer p::before{
     padding: 4px;
     color: #fafafa;
 }
+.-on{
+    cursor: default;
+}
 .-on::after{
     content: "";
     position: absolute;
