--- a/css/book.css
+++ b/css/book.css
@@ -1,10 +1,12 @@
 .wrap{
-    width: 1200px;
+    widows: 100%;
+    max-width: 1140px;
     margin: 0 auto 170px;    
 }
 .wrap .container{
     width: 100%;
     display: flex;
+    flex-flow: wrap;
     justify-content: space-around;
 }
 .wrap .item{
@@ -42,12 +44,13 @@
     font-weight: 200;
 }
 .column{
-    width: 1200px;
+    width: 100%;
+    max-width: 1140px;
     margin: auto;
 }
 .column .container{
     width: 100%;
-    padding: 0 0 100px;
+    padding-bottom: 100px;
     display: flex;
     flex-flow: column;
 }
@@ -56,9 +59,6 @@
     margin: 100px auto;
     display: flex;
     align-items: center;
-}
-.column .container .item + .item{
-    margin-top: 250px;
 }
 .column .container .item .pic{
     width: 40%;
@@ -77,7 +77,7 @@
 }
 .column .container .item .pic img{
     width: 100%;
-    height: 480px;
+    /* height: 480px; */
     object-fit: contain;
     vertical-align: middle;
 }
@@ -106,9 +106,8 @@
     width: 100%;
     text-align: justify;
 }
-/* 下面幾個選取方法學起來 */
 .column .container .item > :first-child{ 
-    margin-right: -15%;
+    margin-right: -13%;
 }
 .column .container .item:nth-child(1) .txt{
     background-color: rgba(245, 124, 0, .8);
@@ -125,9 +124,9 @@
 .column .container .item:nth-child(5) .txt{
     background-color: rgba(245, 124, 0, .8);
 }
-ol{
-    /* width: 200px; */
-    width: 1200px;
+ol{    
+    width: 100%;
+    max-width: 1140px;
     height: 35px;
     margin: 10px auto 130px;
     display: flex;
@@ -167,4 +166,72 @@ ol li a{
     color: #212121;
     font-size: 20px;
     text-align: center;
+}
+
+@media screen and (max-width: 1199px) and (min-width: 992px){
+    .wrap, .column, ol{
+        max-width: 960px;
+    }
+    .wrap{        
+        width: 95%;
+        margin-bottom: 150px;
+    }    
+    .wrap .item{
+        width: 75%;
+        padding-top: 50px;
+        margin-bottom: 120px;
+    }
+    .wrap .item .txt h3{
+        font-size: 36px;
+    }
+    .column{
+        width: 95%;
+    }
+    
+}
+
+@media screen and (max-width: 991px)/*and (min-width: 992px)*/{
+    .wrap, .column, ol{
+        max-width: 720px;
+    }
+    .wrap{
+        width: 95%;
+        margin-bottom: 100px;
+    }    
+    .wrap .item{
+        width: 75%;
+        padding-top: 50px;
+        margin-bottom: 100px;
+    }
+    .wrap .item .txt h3{
+        font-size: 36px;
+    }
+    .column{
+        width: 95%;
+    }
+    .column .container .item{
+        margin: 30 auto;
+    }
+    .column .container .item{
+        flex-flow: column wrap;
+    }
+    .column .container .item .pic{
+        width: 50%;
+        flex-shrink: 1;
+        order: -1;
+    }
+    .column .container .item .txt{
+        width: 95%;
+        flex-shrink: 1;
+        
+    }
+    .column .container .item .txt .content{
+        width: 100%;
+    }
+    .column .container .item .txt:nth-child(2), .column .container .item .txt:nth-child(4){
+        justify-content: center;
+    }
+    .column .container .item > :first-child{ 
+        margin-right: 0;
+    }
 }
