--- a/css/contact.css
+++ b/css/contact.css
@@ -60,7 +60,12 @@ form input[type="submit"]:hover{
     color: #212121;
     border: 2px solid #212121;
 }
-
+span{
+    color: rgb(202, 64, 64);
+}
+.-error{
+    border: 3px solid red;
+}
 @media screen and (max-width: 991px){
     .container{
         max-width: 720px;
