--- a/css/book.css
+++ b/css/book.css
@@ -210,7 +210,7 @@ ol li a{
         width: 95%;
     }
     .column .container .item{
-        margin: 30 auto;
+        margin: 30px auto;
     }
     .column .container .item{
         flex-flow: column wrap;
