--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -143,7 +143,8 @@
         width: 90%;
         height: auto;
         max-width: 720px;
-        display: none;
+        /* display: none; */
+        align-self: center;
 
     }
     .background{
