--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -134,7 +134,7 @@
         
     }
 } */
-@media screen and (max-width: 991px){
+@media screen and (max-width: 991px) and (min-width: 576px){
     .origin .txt{
         width: 90%; 
         max-width: 720px;       
@@ -154,13 +154,12 @@
     .discript{
         height: auto;
         padding: 0 0 100px 0;
-    }
-    .discript p{        
+    }    
+    .discript .wrap p{        
         width: 85%;
         max-width: 500px;        
-        
     }
-    .discript p span{
+    .discript .wrap span{
         border-bottom: 4px solid rgba(33, 33, 33, .5);       
         border-radius: 0 0 190px 190px;
         margin-bottom: 25px;
@@ -172,4 +171,52 @@
         max-width: 324px;
     }
     
+    
 }
+
+@media all and (max-width: 575px){
+    
+    .origin .txt{
+        width: 90%; 
+        max-width: 720px;       
+    }
+    .origin img{
+        width: 90%;
+        height: auto;
+        max-width: 720px;
+        /* display: none; */
+        align-self: center;
+
+    }
+    .background{
+        background: none;
+        background-color: #FFB74D;        
+    }
+    .discript{
+        height: auto;
+        padding: 0 0 50px 0;
+    }
+    .discript h2, .member h2{
+        font-size: 36px;
+    }  
+    .discript .wrap p{        
+        width: 85%;
+        max-width: 500px;
+        font-size: 28px;        
+    }
+    .discript .wrap span{
+        border-bottom: 4px solid rgba(33, 33, 33, .5);       
+        border-radius: 0 0 45px 45px;
+        margin-bottom: 25px;
+        padding-bottom: 20px;
+        font-size: 32px;
+    }
+    .member .item{
+        width: 100%;
+        max-width: 324px;
+        margin-bottom: 70px;
+    }
+    .member .wrap{
+        padding-bottom: 50px;
+    }
+} 
