--- a/css/basis.css
+++ b/css/basis.css
@@ -152,7 +152,7 @@ footer p::before{
 }
 .path{
     margin: 60px 80px;
-}    
+}   
 .path a{
     color: #fafafa;    
 }
@@ -288,8 +288,6 @@ div.hamburg span {
         bottom: 0;
         background-color: rgba(33, 33, 33, .9);
         transform: translateX(100%);
-        
-
     }
     nav ul{
         flex-flow: column;
@@ -309,5 +307,15 @@ div.hamburg span {
     }
     nav .-on::after{
         display: none;
+    }
+    .path{
+        margin: 50px 0px 50px 30px;
+    }
+    
+}
+@media all and (max-width: 575px){
+    p{
+        font-size: 18px;
+        line-height: 1.4;
     }
 }
