--- a/css/trash.css
+++ b/css/trash.css
@@ -4,9 +4,7 @@
     z-index: 2;
 }
 .wrap{
-    overflow: hidden;
-    height: calc(100vh - 80px);
-
+    
 }
 .background{
     background-image: url(../img/gallery.jpg);
@@ -24,65 +22,58 @@
     justify-content: center;
     align-items: center;
     padding: 1em;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .3);
 }
 .wrap p{
     line-height: 1.6;
-    text-align: center;
     font-weight: bold;
 }
-.wrap div:nth-child(2){
+/* .container div:nth-child(1){
     width: 454px;
     height: 148px;
-    position: absolute;
-    top: 100px;
-    left: 450px;
-    opacity: 0;
+    margin: 140px 0 0 40px;
 }
-.wrap div:nth-child(3){
+.container div:nth-child(2){
     width: 524px;
     height: 238px;
     position: absolute;
-    right: 400px;
-    top: 500px;
-    opacity: 0
-
+    right: 5%;
+    bottom: 15%;
 }
-.wrap div:nth-child(4){
-    width: 380px;
-    height: 200px;
+.container div:nth-child(3){
+    width: 328px;
+    height: 182px;
     position: absolute;
-    right: 450px;
-    top: 250px;
-    opacity: 0
-
+    right: 15%;
+    bottom: 50%;
 }
-.wrap div:nth-child(5){
-    width: 400px;
-    height: 180px;
+.container div:nth-child(3) p, .container div:nth-child(4) p{
+    font-size: 20px;
+}
+.container div:nth-child(4){
+    width: 328px;
+    height: 152px;
     position: absolute;
     left: 25%;
     bottom: 40%;
-    opacity: 0
-
 }
-.wrap div:nth-child(6){
-    width: 310px;
-    height: 250px;
+.container div:nth-child(5){
+    width: 138px;
+    height: 155px;
     position: absolute;
     right: 50%;
     bottom: 50%;
-    transform: translate(50%, 15%);
-    opacity: 0
-
+    transform: translateX(50%);
 }
-button{
-    width: 170px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, .7);
+.container div:nth-child(5) p{
+    font-size: 10px;
+} */
+/* button{
+    width: 90px;
+    height: 30px;
+    font-size: 10px;
     position: absolute;
     right: 50%;
     bottom: 50%;
-    transform: translate(50%, 200%);
-    opacity: 0;
-}
+    transform: translate(50%, 110%);
+} */
