--- a/css/book.css
+++ b/css/book.css
@@ -186,8 +186,7 @@ ol li a{
     }
     .column{
         width: 95%;
-    }
-    
+    }    
 }
 
 @media screen and (max-width: 991px) and (min-width: 576px){
@@ -221,7 +220,7 @@ ol li a{
         font-size: 36px;
     }
     .column{
-        width: 100%;
+        width: 95%;
     }
     .column .container .item{
         margin: 30px auto;
@@ -237,7 +236,7 @@ ol li a{
     .column .container .item .txt{
         width: 100%;
         flex-shrink: 1;
-        
+        margin-top: 20px;
     }
     .column .container .item .txt .content{
         width: 100%;
@@ -270,7 +269,7 @@ ol li a{
     }
     .wrap{
         width: 95%;
-        margin-bottom: 100px;
+        margin-bottom: 50px;
     }    
     .wrap .item{
         width: 75%;
@@ -284,7 +283,7 @@ ol li a{
         font-size: 20px;
     }
     .column{
-        width: 100%;
+        width: 95%;
     }
     .column .container .item .txt h3{
         font-size: 26px;
@@ -292,10 +291,8 @@ ol li a{
     }
     .column .container .item{
         margin: 30px auto;
-    }
-    .column .container .item{
         flex-flow: column wrap;
-    }
+    }    
     .column .container .item .pic{
         width: 50%;
         flex-shrink: 1;
@@ -304,7 +301,7 @@ ol li a{
     .column .container .item .txt{
         width: 100%;
         flex-shrink: 1;
-        
+        margin-top: 15px;
     }
     .column .container .item .txt .content{
         width: 100%;
@@ -316,5 +313,4 @@ ol li a{
     .column .container .item > :first-child{ 
         margin-right: 0;
     }
-
 }
